Test a little differently.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
     src: cupsd.conf.j2
     dest: /etc/cups/cupsd.conf
     mode: "0640"
-    validate: cupsd -t -s %s
+    validate: cupsd -t -c %s
   notify:
     - restart cups
 
