Moving to collections instead of modules shipped with Ansible.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for cups
 
 - name: restart cups
-  service:
+  ansible.builtin.service:
     name: "{{ cups_service }}"
     state: restarted
   when:
