--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: Robert de Bock
+  namespace: robertdebock
   role_name: cups
   description: Install and configure CUPS, the Common Unix Printing System.
   license: Apache-2.0
