--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,26 +1,26 @@
 ---
 # tasks file for cups
 
-- name: import assert.yml
+- name: Import assert.yml
   ansible.builtin.import_tasks: assert.yml
   run_once: yes
   delegate_to: localhost
 
-- name: install packages
+- name: Install packages
   ansible.builtin.package:
     name: cups
     state: present
 
-- name: configure cups
+- name: Configure cups
   ansible.builtin.template:
     src: cupsd.conf.j2
     dest: /etc/cups/cupsd.conf
     mode: "0640"
     validate: cupsd -t -c %s
   notify:
-    - restart cups
+    - Restart cups
 
-- name: start and enable software
+- name: Start and enable software
   ansible.builtin.service:
     name: "{{ cups_service }}"
     state: started
