--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: assert | Test if cups_listen is set correctly
+- name: assert | Test cups_listen
   ansible.builtin.assert:
     that:
       - cups_listen is defined
@@ -8,7 +8,7 @@
       - cups_listen is not none
     quiet: yes
 
-- name: assert | Test if cups_browsing is set correctly
+- name: assert | Test cups_browsing
   ansible.builtin.assert:
     that:
       - cups_browsing is defined
@@ -16,14 +16,14 @@
       - cups_browsing in [ "Off", "On" ]
     quiet: yes
 
-- name: assert | Test if cups_locations is set correctly
+- name: assert | Test cups_locations
   ansible.builtin.assert:
     that:
       - cups_locations is defined
       - cups_locations is iterable
     quiet: yes
 
-- name: assert | Test if item in cups_locations is set correctly
+- name: assert | Test item in cups_locations
   ansible.builtin.assert:
     that:
       - item.name is defined
@@ -37,7 +37,7 @@
   loop_control:
     label: "{{ item.name }}"
 
-- name: assert | Test if item.authtype in cups_locations is set correctly
+- name: assert | Test item.authtype in cups_locations
   ansible.builtin.assert:
     that:
       - item.authtype in [ "Basic", "Default", "Negotiate", "None" ]
@@ -48,7 +48,7 @@
   when:
     - item.authtype is defined
 
-- name: assert | Test if item.allow in cups_locations is set correctly
+- name: assert | Test item.allow in cups_locations
   ansible.builtin.assert:
     that:
       - item.allow is string
@@ -60,7 +60,7 @@
   when:
     - item.allow is defined
 
-- name: assert | Test if cups_preserve_job_history is set correctly
+- name: assert | Test cups_preserve_job_history
   ansible.builtin.assert:
     that:
       - cups_preserve_job_history is defined
@@ -68,7 +68,7 @@
       - cups_preserve_job_history in [ "No", "Yes" ]
     quiet: yes
 
-- name: assert | Test if cups_web_interface is set correctly
+- name: assert | Test cups_web_interface
   ansible.builtin.assert:
     that:
       - cups_web_interface is defined
