--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,7 @@
     src: cupsd.conf.j2
     dest: /etc/cups/cupsd.conf
     mode: "0640"
-    validate: cupsd -t -c %s
+    validate: cupsd -t -s /etc/cups/cups-files.conf -c %s
   notify:
     - Restart cups
 
