Shells using pipes should set the pipefail option

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -12,4 +12,4 @@
 
 - name: Load the AppArmor cups profile
   ansible.builtin.shell:
-    cmd: cat /etc/apparmor.d/usr.sbin.cupsd | apparmor_parser -a
+    cmd: set -o pipefail ; cat /etc/apparmor.d/usr.sbin.cupsd | apparmor_parser -a
