--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,9 +9,9 @@
 - name: Reload disabled AppArmor cups profile
   ansible.builtin.command:
     cmd: apparmor_parser -R /etc/apparmor.d/disable/usr.sbin.cupsd
-  changed_when: yes
+  changed_when: true
 
 - name: Load the AppArmor cups profile
   ansible.builtin.shell:
     cmd: "apparmor_parser -a < /etc/apparmor.d/usr.sbin.cupsd"
-  changed_when: yes
+  changed_when: true
